# catnip

./: .gitignore  CMakeLists.txt  README.md
calico/: CMakeCache.txt  CMakeLists.txt
calico/exp/: exp.cpp
calico/src/: global_defines.h
calico/src/activation/: activation.cpp  activation.h
calico/src/cl/activation/: activation.cl
calico/src/cl/connection/: convolution.cl
calico/src/cl/network/: init.cl
calico/src/cl/rbm/: rbm.cl
calico/src/cl/rng/: mwc64x.cl  mwc64x_rng.cl  mwc64xvec2_rng.cl  mwc64xvec4_rng.cl  mwc64xvec8_rng.cl  skip_mwc.cl
calico/src/cl/trainer/: backprop.cl
calico/src/cl/util/: sum.cl
calico/src/connection/: connection.cpp  connection.h  convolution.cpp  convolution.h
calico/src/data/: cat.cpp  cat.h  cifar.cpp  cifar.h  images.h  labeled.cpp  labeled.h  mnist.cpp  mnist.h
calico/src/layer/: feature.cpp  feature.h  layer.cpp  layer.h
calico/src/network/: init.cpp  init.h  network.h
calico/src/network/feedforward/: feedforward.cpp  feedforward.h
calico/src/network/rbm/: rbm.cpp  rbm.h  stacked_rbm.cpp  stacked_rbm.h
calico/src/trainer/: backprop.cpp  backprop.h  cd.h  error.cpp  error.h
calico/src/util/: ocl.cpp  ocl.h
calico/test/: test_activation.cpp  test_backprop.cpp  test_cifar.cpp  test_convolution.cpp  test_feature_map.cpp
lib/gtest-1.6.0/: CMakeLists.txt
